@@ -1,3 +1,10 @@
+2005-09-01  Dmitry Diky <diwil@spec.ru>
+
+	* elf32-msp430.c (msp430_elf_relax_delete_bytes): Do not adjust
+	local symbols and move it to
+	(msp430_elf_relax_adjust_locals): New function - walk over the
+	sections in the bfd and adjust relocations as necessary.
+	
 2005-08-31  DJ Delorie  <dj@redhat.com>
 
 	* elf32-i386.c (elf_i386_check_relocs): Don't cast a unary &
